samples/_failures_safe/1761515437_b83f7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09a5c3cd.c:131:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  131 | int main
      | ^~~
